--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -3,7 +3,6 @@
   "rules": {
     // "no-consloe":"error", // console log 방지
     "no-var": "error", // var 사용 금지
-    "prefer-const": "warn", // const 사용 권장
-    "no-require-imports": "error" // require 사용 금지
+    "prefer-const": "warn" // const 사용 권장
   }
 }
