--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:21-jdk
 WORKDIR /app
-COPY build/libs/*.jar app.jar
-EXPOSE 8000
+COPY ./*.jar app.jar
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
