--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=dawn-backend
+
+# =============== DataSource Settings ===============
+spring.datasource.driver-class-name=${DB_DRIVER_CLASS_NAME}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+# =============== JPA Settings ===============
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
