--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
     "ajv-keywords": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "styled-components": "^6.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
