--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -15,3 +15,41 @@ spring:
         hibernate:
             ddl-auto: update
         show-sql: true
+
+    security:
+        oauth2:
+            client:
+                registration:
+                    google:
+                        client-name: google
+                        client-id: ${GOOGLE_CLIENT_ID}
+                        client-secret: ${GOOGLE_CLIENT_PASSWORD}
+                        redirect-uri: ${OAUTH_REDIRECT_URI_PREFIX}/google
+                        authorization-grant-type: authorization_code
+                        scope:
+                            - email
+                            - profile
+                    naver:
+                        client-name: naver
+                        client-id: ${NAVER_CLIENT_ID}
+                        client-secret: ${NAVER_CLIENT_PASSWORD}
+                        redirect-uri: ${OAUTH_REDIRECT_URI_PREFIX}/naver
+                        authorization-grant-type: authorization_code
+                    kakao:
+                        client-name: kakao
+                        client-id: ${KAKAO_CLIENT_ID}
+                        client-secret: ${KAKAO_CLIENT_PASSWORD}
+                        redirect-uri: ${OAUTH_REDIRECT_URI_PREFIX}/kakao
+                        authorization-grant-type: authorization_code
+                        client-authentication-method: client_secret_post
+                provider:
+                    naver:
+                        authorization-uri: https://nid.naver.com/oauth2.0/authorize
+                        token-uri: https://nid.naver.com/oauth2.0/token
+                        user-info-uri: https://openapi.naver.com/v1/nid/me
+                        user-name-attribute: response
+                    kakao:
+                        authorization-uri: https://kauth.kakao.com/oauth/authorize
+                        token-uri: https://kauth.kakao.com/oauth/token
+                        user-info-uri: https://kapi.kakao.com/v2/user/me
+                        user-name-attribute: id
