--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "dependencies": {
     "@eslint/compat": "^1.2.6",
+    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +16,9 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.474.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
@@ -20,6 +26,8 @@
     "react-router-dom": "^7.1.3",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.14",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
