--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -54,6 +54,12 @@ spring:
                         user-info-uri: https://kapi.kakao.com/v2/user/me
                         user-name-attribute: id
 
+    minio:
+        url: ${MINIO_URL}
+        access-key: ${MINIO_ACCESS_KEY}
+        secret-key: ${MINIO_SECRET_KEY}
+        bucket-name: uploads
+
 jwt-secret: ${JWT_SECRET}
 login-endpoint: ${LOGIN_ENDPOINT}
 
