--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "@eslint/compat": "^1.2.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slider": "^1.2.2",
     "@shadcn/ui": "^0.0.4",
