✨ feat : send email S12P11A807-117 #done

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -60,6 +60,20 @@ spring:
         secret-key: ${MINIO_SECRET_KEY}
         bucket-name: uploads
 
+
+    mail:
+        host: smtp.gmail.com
+        port: 587
+        username: ${MAIL_USERNAME}
+        password: ${MAIL_PASSWORD}
+        properties:
+            mail:
+                smtp:
+                    auth: true
+                    timeout: 5000
+                    starttls:
+                        enable: true
+
 jwt-secret: ${JWT_SECRET}
 login-endpoint: ${LOGIN_ENDPOINT}
 
