--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -76,6 +76,10 @@ spring:
     jackson:
         property-naming-strategy: SNAKE_CASE
 
+    data:
+        redis:
+            host: ${REDIS_HOST}
+
 jwt-secret: ${JWT_SECRET}
 login-endpoint: ${LOGIN_ENDPOINT}
 
