--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,14 @@
   "private": true,
   "dependencies": {
     "@eslint/compat": "^1.2.6",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.2",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.3",
@@ -24,6 +25,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.474.0",
     "react": "^18.2.0",
