--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
+    "event-source-polyfill": "^1.0.31",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.474.0",
     "react": "^18.2.0",
