--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@react-three/drei": "^9.121.5",
+    "@react-three/fiber": "^8.17.14",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -28,7 +30,8 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "event-source-polyfill": "^1.0.31",
-    "framer-motion": "^12.4.1",
+    "framer-motion": "^12.4.3",
+    "gsap": "^3.12.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "react": "^18.2.0",
@@ -40,6 +43,7 @@
     "styled-components": "^6.1.14",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.173.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
