--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,9 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3"
   },
   "scripts": {
     "start": "vite",
