--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,13 @@
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
-    "@radix-ui/react-tooltip": "^1.1.7",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-three/drei": "^9.121.5",
     "@react-three/fiber": "^8.17.14",
     "@shadcn/ui": "^0.0.4",
@@ -40,13 +41,13 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "recoil": "^0.7.7",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0",
-    "web-vitals": "^2.1.4",
-    "sockjs-client": "^1.6.1",
-    "stompjs": "^2.3.3"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "vite",
