--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "gsap": "^3.12.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
+    "re-resizable": "^6.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
